--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1,minimum-scale=1" />
+
+    <!-- Zooming is fickle on iPad when re-entering desktop pinned web apps
+      , so I'm standardizing on disallowing it... -->
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
+
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
