--- a/info/index.html
+++ b/info/index.html
@@ -60,9 +60,7 @@
     <div class="mx-wc-main">
       <DIV class="application-main " data-commit-hovercards-enabled="" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV itemscope="" itemtype="http://schema.org/SoftwareSourceCode" class="" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><MAIN id="js-repo-pjax-container" data-pjax-container="" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV class="container-lg clearfix new-discussion-timeline  px-3" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV class="repository-content " style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV id="readme" class="Box md js-code-block-container Box--condensed" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV class="Box-body p-5" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><article class="markdown-body entry-content container-lg mx-wc-selected-elem" itemprop="text" style="display: block; float: none !important; position: relative !important; top: 0px !important; left: 0px !important; margin: 0px !important; flex: unset !important; width: 100% !important; max-width: 100% !important;"><h1><a id="user-content-baseramp" class="anchor" aria-hidden="true" href="#baseramp"></a>Baseramp</h1>
 <h2><a id="user-content-a-system-centered-on-personal-use-and-ownership-of-your-data" class="anchor" aria-hidden="true" href="#a-system-centered-on-personal-use-and-ownership-of-your-data"></a><em>A system centered on personal use and ownership of your data!</em></h2>
-<br>
-<hr>
-<br>
+
 <table border="1">
 <tbody>
 <tr>
@@ -93,15 +91,14 @@
 </td>
 <td>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<p align="center"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dukelink/Baseramp/blob/master/docs/BaserampUtility.gif" referrerpolicy="no-referrer"><img src="assets/1590180395-986d49edd2097b0326e9710620a32fa0.gif" style="max-width:100%;"></a></p>
+<p align="center"><img src="assets/1590180395-986d49edd2097b0326e9710620a32fa0.gif" style="max-width:100%;"></p>
 </td>
 </tr>
 </tbody>
 </table>
+
 <br>
-<hr>
-<br>
-<table border="1">
+<table border="1" width='100%'>
 <tbody>
 <tr>
 <td>
@@ -124,14 +121,13 @@
 </td>
 <td>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<p align="center"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dukelink/Baseramp/blob/master/docs/ProjectsERD.gif" referrerpolicy="no-referrer"><img src="assets/1590180395-20de755e5c9502d7d9620c64c9738a7c.gif" width="300px" style="max-width:100%;"></a></p>
-<p align="center"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dukelink/Baseramp/blob/master/docs/LocalServer.jpg" referrerpolicy="no-referrer"><img src="assets/1590180395-1c7b1684bae49195b19921ec5015e3a0.jpg" width="300px" style="max-width:100%;"></a></p>
+<p align="center"><img src="assets/1590180395-20de755e5c9502d7d9620c64c9738a7c.gif" width="300px" style="max-width:100%;"></p>
+<p align="center"><img src="assets/1590180395-1c7b1684bae49195b19921ec5015e3a0.jpg" width="300px" style="max-width:100%;"></p>
 </td>
 </tr>
 </tbody>
 </table>
-<br>
-<hr>
+
 <br>
 <table border="1">
 <tbody>
@@ -156,13 +152,12 @@
 </td>
 <td>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<p align="center"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dukelink/Baseramp/blob/master/docs/permissionsRequest.jpg" referrerpolicy="no-referrer"><img src="assets/1590180395-63fa16d86d60313af564713ef32a417f.jpg" width="300px" style="max-width:100%;"></a></p>
+<p align="center"><img src="assets/1590180395-63fa16d86d60313af564713ef32a417f.jpg" width="300px" style="max-width:100%;"></p>
 </td>
 </tr>
 </tbody>
 </table>
-<br>
-<hr>
+
 <br>
 <table border="1">
 <tbody>
@@ -193,14 +188,13 @@
 </td>
 <td>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<p align="center"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dukelink/Baseramp/blob/master/docs/OutlineView.jpg" referrerpolicy="no-referrer"><img src="assets/1590180395-5d2875de61a79517e31d57973a82274d.jpg" style="max-width:100%;"></a></p>
-<p align="center"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dukelink/Baseramp/blob/master/docs/DeskTopShortCut.jpg" referrerpolicy="no-referrer"><img src="assets/1590180395-5c6c2c3377c20e1d537da66e228ca86a.jpg" width="250px" style="max-width:100%;"></a></p>
+<p align="center"><img src="assets/1590180395-5d2875de61a79517e31d57973a82274d.jpg" style="max-width:100%;"></p>
+<p align="center"><img src="assets/1590180395-5c6c2c3377c20e1d537da66e228ca86a.jpg" width="250px" style="max-width:100%;"></p>
 </td>
 </tr>
 </tbody>
 </table>
-<br>
-<hr>
+
 <br>
 <table border="1">
 <tbody>
@@ -225,13 +219,12 @@
 </td>
 <td>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<p align="center"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dukelink/Baseramp/blob/master/docs/GithubContributions.jpg" referrerpolicy="no-referrer"><img src="assets/1590180395-0d3e4c47e3eb292e571bbd503870ca15.jpg" style="max-width:100%;"></a></p>
+<p align="center"><img src="assets/1590180395-0d3e4c47e3eb292e571bbd503870ca15.jpg" style="max-width:100%;"></p>
 </td>
 </tr>
 </tbody>
 </table>
-<br>
-<hr>
+
 <br>
 <table border="1">
 <tbody>
@@ -250,13 +243,12 @@
 </td>
 <td>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<p align="center"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dukelink/Baseramp/blob/master/docs/WordCloud.gif" referrerpolicy="no-referrer"><img src="assets/1590180395-4564916693143359502377b5010aa773.gif" style="max-width:100%;"></a></p>
+<p align="center"><img src="assets/1590180395-4564916693143359502377b5010aa773.gif" style="max-width:100%;"></a></p>
 </td>
 </tr>
 </tbody>
 </table>
-<br>
-<hr>
+
 <br>
 <table border="1">
 <tbody>
@@ -284,15 +276,7 @@
 </tbody>
 </table>
 </article></DIV></DIV></DIV></DIV></MAIN></DIV></DIV>
-      
-        <hr />
-        <!-- clipping information -->
-        <div class="clipping-information">
-          <label>Original url: <a href="https://github.com/dukelink/Baseramp" target="_blank" referrerpolicy="no-referrer" rel="noopener noreferrer">Access</a></label><br />
-          <label>Created at: 2020-05-22 13:46:35</label><br />
-          <label>Category: Promotion</label><br />
-          <label>Tags: <code>github.com</code></label>
-        </div>
+
     </div>
   </body>
 </html>
