--- a/info/mobile.html
+++ b/info/mobile.html
@@ -4,7 +4,7 @@
   <!-- OriginalSrc: https://github.com/dukelink/Baseramp -->
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=2.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>GitHub - dukelink/Baseramp: Open Source Project Manager Progressive Web App built on a small Typescript code base and extensible SQL data model</title>
     
@@ -61,9 +61,12 @@
       <DIV class="application-main " data-commit-hovercards-enabled="" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV itemscope="" itemtype="http://schema.org/SoftwareSourceCode" class="" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><MAIN id="js-repo-pjax-container" data-pjax-container="" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV class="container-lg clearfix new-discussion-timeline  px-3" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV class="repository-content " style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV id="readme" class="Box md js-code-block-container Box--condensed" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV class="Box-body p-5" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><article class="markdown-body entry-content container-lg mx-wc-selected-elem" itemprop="text" style="display: block; float: none !important; position: relative !important; top: 0px !important; left: 0px !important; margin: 0px !important; flex: unset !important; width: 100% !important; max-width: 100% !important;"><h1><a id="user-content-baseramp" class="anchor" aria-hidden="true" href="#baseramp"></a>Baseramp</h1>
 <h2><a id="user-content-a-system-centered-on-personal-use-and-ownership-of-your-data" class="anchor" aria-hidden="true" href="#a-system-centered-on-personal-use-and-ownership-of-your-data"></a><em>A system centered on personal use and ownership of your data!</em></h2>
 
-<hr>
+
 <br>
 <table border="1">
+<colgroup>
+  <col style='width:100vw'>
+</colgroup>  
 <tbody>
 <tr>
 <td>
@@ -87,22 +90,24 @@
 </li>
 <li>
 <p>Making it easier to access, use, retain and control your information within one consolidated database
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+</p>
 </li>
 </ul>
 </td>
 <tr></tr>
 <td>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 <p align="center"><img src="assets/1590180395-986d49edd2097b0326e9710620a32fa0.gif" style="max-width:300px;"></p>
 </td>
 </tr>
 </tbody>
 </table>
-<br>
-<hr>
+
 <br>
 <table border="1">
+<colgroup>
+  <col style='width:100vw'>
+</colgroup>
 <tbody>
 <tr>
 <td>
@@ -119,23 +124,26 @@
 </li>
 <li>
 <p>Providing easy-to-use interfaces and <strong>direct data access</strong>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+</p>
+
 </li>
 </ul>
 </td>
 <tr></tr>
 <td>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 <p align="center"><img src="assets/1590180395-20de755e5c9502d7d9620c64c9738a7c.gif" width="300px" style="max-width:100%;"></p>
 <p align="center"><img src="assets/1590180395-1c7b1684bae49195b19921ec5015e3a0.jpg" width="300px" style="max-width:100%;"></p>
 </td>
 </tr>
 </tbody>
 </table>
-<br>
-<hr>
+
 <br>
 <table border="1">
+<colgroup>
+  <col style='width:100vw'>
+</colgroup>
 <tbody>
 <tr>
 <td>
@@ -152,22 +160,24 @@
 </li>
 <li>
 <p>Fragmentation of your data
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+</p>
 </li>
 </ul>
 </td>
 <tr></tr>
 <td>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 <p align="center"><img src="assets/1590180395-63fa16d86d60313af564713ef32a417f.jpg" width="400px" style="max-width:100%;"></p>
 </td>
 </tr>
 </tbody>
 </table>
-<br>
-<hr>
+
 <br>
 <table border="1">
+<colgroup>
+  <col style='width:100vw'>
+</colgroup>
 <tbody>
 <tr>
 <td>
@@ -190,23 +200,25 @@
 </li>
 <li>
 <p><strong>That is easy to configure without programming</strong>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+</p>
 </li>
 </ul>
 </td>
 <tr></tr>
 <td>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 <p align="center"><img src="assets/1590180395-5d2875de61a79517e31d57973a82274d.jpg" style="max-width:300px;"></p>
 <p align="center"><img src="assets/1590180395-5c6c2c3377c20e1d537da66e228ca86a.jpg" width="300px" style="max-width:100%;"></p>
 </td>
 </tr>
 </tbody>
 </table>
-<br>
-<hr>
+
 <br>
 <table border="1">
+<colgroup>
+  <col style='width:100vw'>
+</colgroup>  
 <tbody>
 <tr>
 <td>
@@ -223,23 +235,25 @@
 </li>
 <li>
 <p>Programmers may clone, fork, and try out the code
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+</p>
 </li>
 </ul>
 </td>
 <tr></tr>
 
 <td>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<p align="center"><img src="assets/1590180395-0d3e4c47e3eb292e571bbd503870ca15.jpg" style="max-width:100%;"></p>
+
+<p align="center"><img src="assets/1590180395-0d3e4c47e3eb292e571bbd503870ca15.jpg" style="max-width:600px;"></p>
 </td>
 </tr>
 </tbody>
 </table>
-<br>
-<hr>
+
 <br>
 <table border="1">
+<colgroup>
+  <col style='width:100vw'>
+</colgroup>
 <tbody>
 <tr>
 <td>
@@ -251,21 +265,23 @@
 <li>A few initial APIs to integrate with popular cloud services</li>
 <li>Offline data storage, supporting read-only usage at a minimum</li>
 <li>Two-factor authentication with password recovery
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
+</li>
 </ul>
 </td>
 <tr></tr>
 <td>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<p align="center"><img src="assets/1590180395-4564916693143359502377b5010aa773.gif" style="max-width:100%;"></p>
+
+<p align="center"><img src="assets/1590180395-4564916693143359502377b5010aa773.gif" style="max-width:500px;"></p>
 </td>
 </tr>
 </tbody>
 </table>
-<br>
-<hr>
+
 <br>
 <table border="1">
+<colgroup>
+  <col style='width:100vw'>
+</colgroup>  
 <tbody>
 <tr>
 <td>
@@ -279,13 +295,13 @@
 </li>
 <li>
 <p><a href="https://github.com/dukelink" target="_blank" referrerpolicy="no-referrer" rel="noopener noreferrer">https://github.com/dukelink</a>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+</p>
 </li>
 </ul>
 </td>
 <tr></tr>
 <td>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
 <p align="center"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dukelink/Baseramp/blob/master/docs/MojavePhoto2.jpg" referrerpolicy="no-referrer"><img src="assets/1590180395-27b85b70d6e949b611de70ecd3e7de51.jpg" width="250px" style="max-width:100%;"></a></p>
 </td>
 </tr>
