--- a/client/public/info/index.html
+++ b/client/public/info/index.html
@@ -139,7 +139,7 @@
 <p>Numerous paid subscription</p>
 </li>
 <li>
-<p>Exchanging data for so called "free" services</p>
+<p>Unnecessary exchange of data for so-called "free" services</p>
 </li>
 <li>
 <p>Online loss of data privacy</p>
