--- a/client/public/info/mobile.html
+++ b/client/public/info/mobile.html
@@ -123,9 +123,10 @@
 <p>Or hosted on their private cloud account</p>
 </li>
 <li>
-<p>Providing easy-to-use interfaces and <strong>direct data access</strong>
-</p>
-
+<p>Providing one consistent interface</p>
+</li>
+<li>
+<p>And <strong>direct access to data</strong>
 </li>
 </ul>
 </td>
