--- a/client/public/info/mobile.html
+++ b/client/public/info/mobile.html
@@ -114,7 +114,7 @@
 <h3><a id="user-content-how-does-baseramp-work" class="anchor" aria-hidden="true" href="#how-does-baseramp-work"></a>How does Baseramp work?</h3>
 <ul>
 <li>
-<p>By enabling end users to spin up private databases</p>
+<p>By enabling end users to spin-up private databases</p>
 </li>
 <li>
 <p>Hosted on their own server hardward</p>
@@ -225,14 +225,13 @@
 <td>
 <h3><a id="user-content-what-is-the-status-of-baseramp-development" class="anchor" aria-hidden="true" href="#what-is-the-status-of-baseramp-development"></a>What is the status of Baseramp development?</h3>
 <ul>
-<li>
-<p>The system is still in "pre release" development</p>
+<p>The system is in the pre-release stage of development</p>
 </li>
 <li>
-<p>And already in use by family, friends, and collegeaus</p>
+<p>But already in use by family, friends, and colleagues</p>
 </li>
 <li>
-<p><strong>Open for comment and public "alpha testing"</strong> from our test server</p>
+<p><strong>And open for comment and public "alpha testing"</strong>
 </li>
 <li>
 <p>Programmers may clone, fork, and try out the code
@@ -264,9 +263,7 @@
 <li>Full-text search</li>
 <li>Basic reports to support the initial set of application templates</li>
 <li>A few initial APIs to integrate with popular cloud services</li>
-<li>Offline data storage, supporting read-only usage at a minimum</li>
-<li>Two-factor authentication with password recovery
-</li>
+<li>Data caching on mobile devices to support offline usage</li>
 </ul>
 </td>
 <tr></tr>
