--- a/client/public/info/mobile.html
+++ b/client/public/info/mobile.html
@@ -59,7 +59,7 @@
   <body style="background-color: #464646 !important; min-height: 100%; height: auto; position: static !important; overflow: auto !important; padding-bottom: 0px !important;">
     <div class="mx-wc-main">
       <DIV class="application-main " data-commit-hovercards-enabled="" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV itemscope="" itemtype="http://schema.org/SoftwareSourceCode" class="" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><MAIN id="js-repo-pjax-container" data-pjax-container="" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV class="container-lg clearfix new-discussion-timeline  px-3" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV class="repository-content " style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV id="readme" class="Box md js-code-block-container Box--condensed" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><DIV class="Box-body p-5" style="display: block !important;float: none !important;position: relative !important;transform: initial !important;top: 0 !important;left: 0 !important;border: 0px !important;width: 100% !important;min-width: 100% !important;max-width: 100% !important;height: auto !important;min-height: auto !important;max-height: 100% !important;margin: 0px !important;padding: 0px !important;"><article class="markdown-body entry-content container-lg mx-wc-selected-elem" itemprop="text" style="display: block; float: none !important; position: relative !important; top: 0px !important; left: 0px !important; margin: 0px !important; flex: unset !important; width: 100% !important; max-width: 100% !important;"><h1><a id="user-content-baseramp" class="anchor" aria-hidden="true" href="#baseramp"></a>Baseramp</h1>
-<h2><a id="user-content-a-system-centered-on-personal-use-and-ownership-of-your-data" class="anchor" aria-hidden="true" href="#a-system-centered-on-personal-use-and-ownership-of-your-data"></a><em>A database for end users, enabling personal and private data ownership!</em></h2>
+<h2><a id="user-content-a-system-centered-on-personal-use-and-ownership-of-your-data" class="anchor" aria-hidden="true" href="#a-system-centered-on-personal-use-and-ownership-of-your-data"></a><em>An end user database system, enabling personal data usage and private data ownership!</em></h2>
 
 
 <br>
@@ -89,7 +89,7 @@
 </ul>
 </li>
 <li>
-<p>Making it easier to access, use, retain and control your information within one consolidated database
+<p>Making it easier to <strong>access, use, retain and control information</strong> within one consolidated database
 </p>
 </li>
 </ul>
@@ -97,7 +97,7 @@
 <tr></tr>
 <td>
 
-<p align="center"><img src="assets/1590180395-986d49edd2097b0326e9710620a32fa0.gif" style="max-width:300px;"></p>
+<p align="center"><img src="assets/1590180395-986d49edd2097b0326e9710620a32fa0.gif" style="max-width:90vw;"></p>
 </td>
 </tr>
 </tbody>
@@ -111,7 +111,44 @@
 <tbody>
 <tr>
 <td>
-<h3><a id="user-content-how-does-baseramp-work" class="anchor" aria-hidden="true" href="#how-does-baseramp-work"></a>How does Baseramp work?</h3>
+<h3><a id="user-content-baseramp-data-ownership-addresses-these-problems" class="anchor" aria-hidden="true" href="#baseramp-data-ownership-addresses-these-problems"></a>
+  <strong>Data ownership</strong> addresses these problems:
+</h3>
+<ul>
+<li>
+<p>Numerous paid subscription</p>
+</li>
+<li>
+<p>Unnecessary exchange of data for so-called "free" services</p>
+</li>
+<li>
+<p>Online loss of data privacy</p>
+</li>
+<li>
+<p>Data silos and data fragmentation
+</p>
+</li>
+</ul>
+</td>
+<tr></tr>
+<td>
+  <p align="center"><img src="assets/1590180395-63fa16d86d60313af564713ef32a417f.jpg" style="width: 70vw; max-width: 500px;"></p>
+</td>
+</tr>
+</tbody>
+</table>
+
+<br>
+<table border="1">
+<colgroup>
+  <col style='width:100vw'>
+</colgroup>
+<tbody>
+<tr>
+<td>
+<h3><a id="user-content-how-does-baseramp-work" class="anchor" aria-hidden="true" href="#how-does-baseramp-work"></a>
+  How does Baseramp work?
+</h3>
 <ul>
 <li>
 <p>By enabling end users to spin-up private databases</p>
@@ -126,49 +163,14 @@
 <p>Providing one consistent interface</p>
 </li>
 <li>
-<p>And <strong>direct access to data</strong>
+<p>And <strong>direct access to all their data</strong>
 </li>
 </ul>
 </td>
 <tr></tr>
 <td>
-
-<p align="center"><img src="assets/1590180395-20de755e5c9502d7d9620c64c9738a7c.gif" width="300px" style="max-width:100%;"></p>
-<p align="center"><img src="assets/1590180395-1c7b1684bae49195b19921ec5015e3a0.jpg" width="300px" style="max-width:100%;"></p>
-</td>
-</tr>
-</tbody>
-</table>
-
-<br>
-<table border="1">
-<colgroup>
-  <col style='width:100vw'>
-</colgroup>
-<tbody>
-<tr>
-<td>
-<h3><a id="user-content-baseramp-data-ownership-addresses-these-problems" class="anchor" aria-hidden="true" href="#baseramp-data-ownership-addresses-these-problems"></a>Baseramp <strong>data ownership</strong> addresses these problems:</h3>
-<ul>
-<li>
-<p>Numerous paid subscription</p>
-</li>
-<li>
-<p>Unnecessary exchange of data for so-called "free" services</p>
-</li>
-<li>
-<p>Online loss of data privacy</p>
-</li>
-<li>
-<p>Fragmentation of your data
-</p>
-</li>
-</ul>
-</td>
-<tr></tr>
-<td>
-
-<p align="center"><img src="assets/1590180395-63fa16d86d60313af564713ef32a417f.jpg" width="400px" style="max-width:100%;"></p>
+<p align="center"><img src="assets/1590180395-20de755e5c9502d7d9620c64c9738a7c.gif" style="max-width:80vw;"></p>
+<p align="center"><img src="assets/1590180395-1c7b1684bae49195b19921ec5015e3a0.jpg" style="max-width:80vw;"></p>
 </td>
 </tr>
 </tbody>
@@ -185,7 +187,7 @@
 <h3><a id="user-content-what-makes-baseramp-easy-to-use" class="anchor" aria-hidden="true" href="#what-makes-baseramp-easy-to-use"></a>What makes Baseramp easy to use?</h3>
 <ul>
 <li>
-<p>A familiar outlining method to organize your data</p>
+<p>A familiar outlining method to organize data</p>
 </li>
 <li>
 <p>And a growing catalog of plug-in templates for common applications</p>
@@ -208,8 +210,8 @@
 <tr></tr>
 <td>
 
-<p align="center"><img src="assets/1590180395-5d2875de61a79517e31d57973a82274d.jpg" style="max-width:300px;"></p>
-<p align="center"><img src="assets/1590180395-5c6c2c3377c20e1d537da66e228ca86a.jpg" width="300px" style="max-width:100%;"></p>
+<p align="center"><img src="assets/1590180395-5d2875de61a79517e31d57973a82274d.jpg" style="max-width:90vw;"></p>
+<p align="center"><img src="assets/1590180395-5c6c2c3377c20e1d537da66e228ca86a.jpg" style="max-width:75vw;"></p>
 </td>
 </tr>
 </tbody>
@@ -223,7 +225,9 @@
 <tbody>
 <tr>
 <td>
-<h3><a id="user-content-what-is-the-status-of-baseramp-development" class="anchor" aria-hidden="true" href="#what-is-the-status-of-baseramp-development"></a>What is the status of Baseramp development?</h3>
+<h3><a id="user-content-what-is-the-status-of-baseramp-development" class="anchor" aria-hidden="true" href="#what-is-the-status-of-baseramp-development"></a>
+  What is the status of Baseramp development?
+</h3>
 <ul>
 <p>The system is in the pre-release stage of development</p>
 </li>
@@ -243,7 +247,7 @@
 
 <td>
 
-<p align="center"><img src="assets/1590180395-0d3e4c47e3eb292e571bbd503870ca15.jpg" style="max-width:600px;"></p>
+<p align="center"><img src="assets/1590180395-0d3e4c47e3eb292e571bbd503870ca15.jpg" style="max-width:90vw;"></p>
 </td>
 </tr>
 </tbody>
@@ -269,7 +273,7 @@
 <tr></tr>
 <td>
 
-<p align="center"><img src="assets/1590180395-4564916693143359502377b5010aa773.gif" style="max-width:500px;"></p>
+<p align="center"><img src="assets/1590180395-4564916693143359502377b5010aa773.gif" style="max-width:90vw;"></p>
 </td>
 </tr>
 </tbody>
@@ -300,7 +304,8 @@
 <tr></tr>
 <td>
 
-<p align="center"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dukelink/Baseramp/blob/master/docs/MojavePhoto2.jpg" referrerpolicy="no-referrer"><img src="assets/1590180395-27b85b70d6e949b611de70ecd3e7de51.jpg" width="250px" style="max-width:100%;"></a></p>
+<p align="center"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dukelink/Baseramp/blob/master/docs/MojavePhoto2.jpg" referrerpolicy="no-referrer">
+  <img src="assets/1590180395-27b85b70d6e949b611de70ecd3e7de51.jpg" style="width:50vw; max-width: 250px;"></a></p>
 </td>
 </tr>
 </tbody>
