Readme refinements yet again

--- a/client/public/info/index.html
+++ b/client/public/info/index.html
@@ -68,10 +68,10 @@
 <h3><a id="user-content-what-does-baseramp-do" class="anchor" aria-hidden="true" href="#what-does-baseramp-do"></a>What does Baseramp do?</h3>
 <ul>
 <li>
-<p><strong>Opens up database technology for private usage</strong></p>
+<p>Provides No-Code access to your own private Graph and SQL database</p>
 </li>
 <li>
-<p>With pre-built tables available for common applications:</p>
+<p>With pre-built schemas for common applications:</p>
 <ul>
 <li>To Do Lists</li>
 <li>Recurring Chores</li>
@@ -84,7 +84,7 @@
 </ul>
 </li>
 <li>
-<p>Making it easier to <strong>access, use, retain and control information</strong> within one consolidated database
+<p>Enabling full <strong>Usage, Retention, and Control</strong> of your information
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 </li>
 </ul>
@@ -103,20 +103,20 @@
 <tr>
 <td>
 <h3><a id="user-content-baseramp-data-ownership-addresses-these-problems" class="anchor" aria-hidden="true" href="#baseramp-data-ownership-addresses-these-problems"></a>
-  <strong>Data ownership</strong> addresses these problems:
+  <strong>Database ownership</strong> solves these problems:
 </h3>
 <ul>
 <li>
-<p>Numerous paid subscription</p>
+<p>Proliferation of paid subscriptions</p>
 </li>
 <li>
-<p>Unnecessary exchange of data for so-called "free" services</p>
+<p>Unnecessary exchange of your data for so-called "free" services</p>
 </li>
 <li>
-<p>Online loss of data privacy</p>
+<p>Online loss of privacy</p>
 </li>
 <li>
-<p>Data silos and data fragmentation
+<p>Data fragmentation within numerous "data silos"
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 </li>
 </ul>
@@ -137,19 +137,19 @@
 <h3><a id="user-content-how-does-baseramp-work" class="anchor" aria-hidden="true" href="#how-does-baseramp-work"></a>How does Baseramp work?</h3>
 <ul>
 <li>
-<p>By enabling end users to spin-up private databases</p>
+<p>By enabling end users to spin-up a <strong>personal</strong> database</p>
 </li>
 <li>
-<p>Hosted on their own server hardward</p>
+<p>Hosted on their own server hardware</p>
 </li>
 <li>
-<p>Or hosted on their private cloud account</p>
+<p>Or hosted by a secure cloud provider</p>
 </li>
 <li>
-  <p>Providing one consistent interface</p>
+  <p>With one consistent interface</p>
 </li>
 <li>
-<p>And <strong>direct access to all their data</strong>
+<p>And <strong>full, direct, and centralized</strong> access to data
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 </li>
 </ul>
@@ -171,19 +171,19 @@
 <h3><a id="user-content-what-makes-baseramp-easy-to-use" class="anchor" aria-hidden="true" href="#what-makes-baseramp-easy-to-use"></a>What makes Baseramp easy to use?</h3>
 <ul>
 <li>
-<p>A familiar outlining method to organize data</p>
+<p>A familiar outlining method to organize your data your way</p>
 </li>
 <li>
-<p>And a growing catalog of plug-in templates for common applications</p>
+<p>A catalog of plug-in templates for common applications</p>
 </li>
 <li>
-<p>With built-in logic that "understands" database structures</p>
+<p>Built-in logic that "understands" database structures</p>
 </li>
 <li>
-<p>Enabling the automatic creation and validation of data entry forms</p>
+<p>To automate data entry and reporting <strong>without coding</strong></p>
 </li>
 <li>
-<p>Packaged as a Progressive Web App, dockable on PC and mobile desktops</p>
+<p>Packaged as a Progressive Web App; dockable on PC and mobile desktops</p>
 </li>
 <li>
 <p><strong>That is easy to configure without programming</strong>
@@ -208,7 +208,7 @@
 <h3><a id="user-content-what-is-the-status-of-baseramp-development" class="anchor" aria-hidden="true" href="#what-is-the-status-of-baseramp-development"></a>What is the status of Baseramp development?</h3>
 <ul>
 <li>
-<p>The system is in the pre-release stage of development</p>
+<p>The system is in a pre-release stage of development</p>
 </li>
 <li>
 <p>But already in use by family, friends, and colleagues</p>
@@ -237,11 +237,12 @@
 <td>
 <h3><a id="user-content-what-are-some-additional-features-planned-before-initial-release" class="anchor" aria-hidden="true" href="#what-are-some-additional-features-planned-before-initial-release"></a>What more is planned for the initial release?</h3>
 <ul>
-<li>Simple notes formatting, probably utilizing markdown format</li>
-<li>Full-text search</li>
-<li>Basic reports to support the initial set of application templates</li>
-<li>A few initial APIs to integrate with popular cloud services</li>
-<li>Data caching on mobile devices to support offline usage</li>
+  <li>Notes formatting, probably using simple markdown format</li>
+  <li>Reports to support the initial set of application templates</li>
+  <li>APIs to migrate data from popular cloud services</li>
+  <li>Data caching on mobile devices to support offline usage</li>
+  <li>Selective data sharing with family or coworkers</li>
+  <li>Easy deployment scripts for local and cloud hosting</li>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 </ul>
 </td>
