Mobile info pages - refine image scaling

--- a/client/public/info/mobile.html
+++ b/client/public/info/mobile.html
@@ -90,14 +90,13 @@
 </li>
 <li>
 <p>Enabling full <strong>Usage, Retention, and Control</strong> of your information
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 </li>
 </ul>
 </td>
 <tr></tr>
 <td>
 
-<p align="center"><img src="assets/1590180395-986d49edd2097b0326e9710620a32fa0.gif" style="max-width:90vw;"></p>
+<p align="center"><img src="assets/1590180395-986d49edd2097b0326e9710620a32fa0.gif" style="width:70vw; max-width: 400px"></p>
 </td>
 </tr>
 </tbody>
@@ -132,7 +131,7 @@
 </td>
 <tr></tr>
 <td>
-  <p align="center"><img src="assets/1590180395-63fa16d86d60313af564713ef32a417f.jpg" style="width: 70vw; max-width: 500px;"></p>
+  <p align="center"><img src="assets/1590180395-63fa16d86d60313af564713ef32a417f.jpg" style="width:80vw; max-width: 400px"></p>
 </td>
 </tr>
 </tbody>
@@ -169,8 +168,8 @@
 </td>
 <tr></tr>
 <td>
-<p align="center"><img src="assets/1590180395-20de755e5c9502d7d9620c64c9738a7c.gif" style="max-width:80vw;"></p>
-<p align="center"><img src="assets/1590180395-1c7b1684bae49195b19921ec5015e3a0.jpg" style="max-width:80vw;"></p>
+<p align="center"><img src="assets/1590180395-20de755e5c9502d7d9620c64c9738a7c.gif" style="width:70vw; max-width: 400px"></p>
+<p align="center"><img src="assets/1590180395-1c7b1684bae49195b19921ec5015e3a0.jpg" style="width:70vw; max-width: 400px"></p>
 </td>
 </tr>
 </tbody>
@@ -207,8 +206,8 @@
 <tr></tr>
 <td>
 
-<p align="center"><img src="assets/1590180395-5d2875de61a79517e31d57973a82274d.jpg" style="max-width:90vw;"></p>
-<p align="center"><img src="assets/1590180395-5c6c2c3377c20e1d537da66e228ca86a.jpg" style="max-width:75vw;"></p>
+<p align="center"><img src="assets/1590180395-5d2875de61a79517e31d57973a82274d.jpg" style="width:80vw; max-width: 400px"></p>
+<p align="center"><img src="assets/1590180395-5c6c2c3377c20e1d537da66e228ca86a.jpg" style="width:70vw; max-width: 400px"></p>
 </td>
 </tr>
 </tbody>
@@ -244,7 +243,7 @@
 
 <td>
 
-<p align="center"><img src="assets/1590180395-0d3e4c47e3eb292e571bbd503870ca15.jpg" style="max-width:90vw;"></p>
+<p align="center"><img src="assets/1590180395-0d3e4c47e3eb292e571bbd503870ca15.jpg" style="width:70vw; max-width: 400px"></p>
 </td>
 </tr>
 </tbody>
@@ -271,7 +270,7 @@
 <tr></tr>
 <td>
 
-<p align="center"><img src="assets/1590180395-4564916693143359502377b5010aa773.gif" style="max-width:90vw;"></p>
+<p align="center"><img src="assets/1590180395-4564916693143359502377b5010aa773.gif" style="width:70vw; max-width: 400px"></p>
 </td>
 </tr>
 </tbody>
@@ -303,7 +302,7 @@
 <td>
 
 <p align="center"><a target="_blank" rel="noopener noreferrer" href="https://github.com/dukelink/Baseramp/blob/master/docs/MojavePhoto2.jpg" referrerpolicy="no-referrer">
-  <img src="assets/1590180395-27b85b70d6e949b611de70ecd3e7de51.jpg" style="width:50vw; max-width: 250px;"></a></p>
+  <img src="assets/1590180395-27b85b70d6e949b611de70ecd3e7de51.jpg" style="width:50vw; max-width: 200px;"></a></p>
 </td>
 </tr>
 </tbody>
