--- a/client/public/info/index.html
+++ b/client/public/info/index.html
@@ -68,7 +68,7 @@
 <h3><a id="user-content-what-does-baseramp-do" class="anchor" aria-hidden="true" href="#what-does-baseramp-do"></a>What does Baseramp do?</h3>
 <ul>
 <li>
-<p>Provides No-Code access to your own private Graph and SQL database</p>
+<p>Provides No-Code access to your own private database</p>
 </li>
 <li>
 <p>With pre-built schemas for common applications:</p>
@@ -84,7 +84,7 @@
 </ul>
 </li>
 <li>
-<p>Enabling full <strong>Usage, Retention, and Control</strong> of your information
+<p>Enabling full <strong>Usage, Retention, and Control</strong> of all your information
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 </li>
 </ul>
@@ -137,7 +137,7 @@
 <h3><a id="user-content-how-does-baseramp-work" class="anchor" aria-hidden="true" href="#how-does-baseramp-work"></a>How does Baseramp work?</h3>
 <ul>
 <li>
-<p>By enabling end users to spin-up a <strong>personal</strong> database</p>
+<p>By enabling end users to spin-up a <strong>personal</strong> SQL database</p>
 </li>
 <li>
 <p>Hosted on their own server hardware</p>
