Info doc / readme updates

--- a/client/public/info/index.html
+++ b/client/public/info/index.html
@@ -84,7 +84,7 @@
 </ul>
 </li>
 <li>
-<p>Enabling full <strong>Usage, Retention, and Control</strong> of all your information
+<p>Enabling you to consolidate, use, protect, share and <strong>own your information</strong>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 </li>
 </ul>
@@ -103,20 +103,26 @@
 <tr>
 <td>
 <h3><a id="user-content-baseramp-data-ownership-addresses-these-problems" class="anchor" aria-hidden="true" href="#baseramp-data-ownership-addresses-these-problems"></a>
-  <strong>Database ownership</strong> solves these problems:
+  What problems does data ownership address?
 </h3>
 <ul>
 <li>
 <p>Proliferation of paid subscriptions</p>
 </li>
 <li>
-<p>Unnecessary exchange of your data for so-called "free" services</p>
+<p>Unnecessary exchange of data for so-called "free" services</p>
 </li>
 <li>
 <p>Online loss of privacy</p>
 </li>
 <li>
-<p>Data fragmentation within numerous "data silos"
+<p>Limited access to only a subset of your data</p>
+</li>
+<li>
+<p>Data fragmentation among vendor "data silos"</p>
+</li>
+<li>
+<p>Vendor "lock in" making it hard to change services
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 </li>
 </ul>
@@ -129,27 +135,72 @@
 </tbody>
 </table>
 
+
+
+<br>
+<table border="1">
+<tbody>
+<tr>
+<td>
+<h3><a id="user-content-baseramp-data-ownership-addresses-these-problems" class="anchor" aria-hidden="true" href="#baseramp-data-ownership-addresses-these-problems"></a>
+  How does data ownership empower users?
+</h3>
+<ul>
+<li>
+<p>Faster data - when data is kept close in proximity</p>
+</li>
+<li>
+<p>More data - when there is a fast & easy place to store it</p>
+</li>
+<li>
+<p>More timely data - when speed and convenience allow "on the fly" capture</p>
+</li>
+<li>
+<p>More accurate data - when you know your sensitive data is private</p>
+</li>
+<li>
+<p>More comprehensive data - with a system designed for data consolidation</p>
+</li>
+<li>
+<p>Better connection of data - when you decide what and with whom to share it</p>
+</li>
+<li>
+<p>Enabling you to do more within <strong>your own data universe</strong>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
+</li>
+</ul>
+</td>
+<td>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<p align="center"><img src="assets/Graph.jpg" width="300px" style="max-width:100%;"></p>
+</td>
+</tr>
+</tbody>
+</table>
+
+
 <br>
 <table border="1" width='100%'>
 <tbody>
 <tr>
 <td>
-<h3><a id="user-content-how-does-baseramp-work" class="anchor" aria-hidden="true" href="#how-does-baseramp-work"></a>How does Baseramp work?</h3>
+<h3><a id="user-content-how-does-baseramp-work" class="anchor" aria-hidden="true" href="#how-does-baseramp-work">
+</a>How does Baseramp work?</h3>
 <ul>
 <li>
-<p>By enabling end users to spin-up a <strong>personal</strong> SQL database</p>
+<p>Baseramp spins-up a private SQL database</p>
 </li>
 <li>
-<p>Hosted on their own server hardware</p>
+<p>And an Application Programming Interface (API)</p>
 </li>
 <li>
-<p>Or hosted by a secure cloud provider</p>
+<p>Hosted on inexpensive hardware like the Raspberry Pi</p>
 </li>
 <li>
-  <p>With one consistent interface</p>
+<p>Or hosted in a personally owned cloud platform account</p>
 </li>
 <li>
-<p>And <strong>full, direct, and centralized</strong> access to data
+<p>A Progressive Web Application (PWA) provides a common user interface on all your devices 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 </li>
 </ul>
@@ -168,25 +219,23 @@
 <tbody>
 <tr>
 <td>
-<h3><a id="user-content-what-makes-baseramp-easy-to-use" class="anchor" aria-hidden="true" href="#what-makes-baseramp-easy-to-use"></a>What makes Baseramp easy to use?</h3>
+<h3><a id="user-content-what-makes-baseramp-easy-to-use" class="anchor" aria-hidden="true" href="#what-makes-baseramp-easy-to-use">
+</a>What makes Baseramp easy to use?</h3>
 <ul>
 <li>
-<p>A familiar outlining method to organize your data your way</p>
+<p>A simple outlining system to organize records</p>
 </li>
 <li>
-<p>A catalog of plug-in templates for common applications</p>
+<p>A pre-configured library of common applications</p>
 </li>
 <li>
-<p>Built-in logic that "understands" database structures</p>
+<p>Graph Theory structures to amend and interrelate records</p>
 </li>
 <li>
-<p>To automate data entry and reporting <strong>without coding</strong></p>
+<p>Automated navigation controls, input forms, and reports <strong>without coding</strong></p>
 </li>
 <li>
-<p>Packaged as a Progressive Web App; dockable on PC and mobile desktops</p>
-</li>
-<li>
-<p><strong>That is easy to configure without programming</strong>
+<p>An application that's dockable on PC desktops and mobile home screens 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
 </li>
 </ul>
@@ -235,13 +284,14 @@
 <tbody>
 <tr>
 <td>
-<h3><a id="user-content-what-are-some-additional-features-planned-before-initial-release" class="anchor" aria-hidden="true" href="#what-are-some-additional-features-planned-before-initial-release"></a>What more is planned for the initial release?</h3>
+<h3><a id="user-content-what-are-some-additional-features-planned-before-initial-release" class="anchor" aria-hidden="true" href="#what-are-some-additional-features-planned-before-initial-release">
+</a>What more is planned for the initial release?</h3>
 <ul>
-  <li>Notes formatting, probably using simple markdown format</li>
-  <li>Reports to support the initial set of application templates</li>
-  <li>APIs to migrate data from popular cloud services</li>
+  <li>Fully generalized graph-over-SQL data model</li>
+  <li>Notes formatting, probably using markdown format</li>
+  <li>APIs to integrate and migrate data from popular online services</li>
   <li>Data caching on mobile devices to support offline usage</li>
-  <li>Selective data sharing with family or coworkers</li>
+  <li>Selective data sharing with family, coworkers and trusted 3rd parties</li>
   <li>Easy deployment scripts for local and cloud hosting</li>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 </ul>
@@ -259,7 +309,8 @@
 <tbody>
 <tr>
 <td>
-<h2><a id="user-content-reach-out-today-if-interested" class="anchor" aria-hidden="true" href="#reach-out-today-if-interested"></a>Reach out today if interested!</h2>
+<h2><a id="user-content-reach-out-today-if-interested" class="anchor" aria-hidden="true" href="#reach-out-today-if-interested">
+</a>Check out the demo video, and reach out today if you are interested in testing or using Baseramp, or making code contributions!</h2>
 <ul>
 <li>
 <p><a href="mailto:duke.lotherington@gmail.com" target="_blank" referrerpolicy="no-referrer" rel="noopener noreferrer">duke.lotherington@gmail.com</a></p>
