Design review: Sarah requested style changes

--- a/client/public/info/mobile.html
+++ b/client/public/info/mobile.html
@@ -70,13 +70,22 @@
 <tbody>
 <tr>
 <td>
-<h3><a id="user-content-what-does-baseramp-do" class="anchor" aria-hidden="true" href="#what-does-baseramp-do"></a>What does Baseramp do?</h3>
+<h3>
+<a id="user-content-what-does-baseramp-do" class="anchor" aria-hidden="true" href="#what-does-baseramp-do">
+</a>What does Baseramp do?</h3>
 <ul>
 <li>
-  <p>Provides No-Code access to your own private Graph and SQL database</p>
+  <p>Creates a private database</p>
 </li>
 <li>
-<p>With pre-built schemas for common applications:</p>
+  <p>On a local or cloud server</p>
+</li>
+<li>
+  <p>That is user configurable without coding</p>
+</li>
+
+<li>
+  <p>Bundled with pre-configured applications:</p>
 <ul>
 <li>To Do Lists</li>
 <li>Recurring Chores</li>
@@ -89,7 +98,7 @@
 </ul>
 </li>
 <li>
-<p>Enabling full <strong>Usage, Retention, and Control</strong> of your information
+<p>Enabling full <strong>Usage, Retention, and Control</strong> of all your information
 </li>
 </ul>
 </td>
@@ -150,7 +159,7 @@
 </h3>
 <ul>
 <li>
-  <p>By enabling end users to spin-up a <strong>personal</strong> database</p>
+  <p>By enabling end users to spin-up a <strong>personal</strong> SQL database</p>
 </li>
 <li>
 <p>Hosted on their own server hardware</p>
